# stock_app

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/stock_app/: NOTE.txt  TODO  __init__.py  constant.py  data_download.py  miscellaneous.py  model_trainer.py  requirements copy.txt  requirements.txt  stock_app.py  style.py  test.py  utils.py  utils_typing.py
src/stock_app/minute_data/: AAPL_2025_01_11_to_2025_01_17.csv  ACA_2025_01_11_to_2025_01_17.csv  AISP_2025_01_11_to_2025_01_17.csv  AI_2025_01_11_to_2025_01_17.csv  AMAT_2025_01_11_to_2025_01_17.csv  ANET_2025_01_11_to_2025_01_17.csv  APP_2025_01_11_to_2025_01_17.csv  AVGO_2025_01_11_to_2025_01_17.csv  BLK_2025_01_11_to_2025_01_17.csv  CRNC_2025_01_11_to_2025_01_17.csv  CRWD_2025_01_11_to_2025_01_17.csv  EQT_2025_01_11_to_2025_01_17.csv  FDX_2025_01_11_to_2025_01_17.csv  HEI_2025_01_11_to_2025_01_17.csv  IBM_2025_01_11_to_2025_01_17.csv  INTC_2025_01_11_to_2025_01_17.csv  IONQ_2025_01_11_to_2025_01_17.csv  LAES_2025_01_11_to_2025_01_17.csv  LIN_2025_01_11_to_2025_01_17.csv  LLY_2025_01_11_to_2025_01_17.csv  LMT_2025_01_11_to_2025_01_17.csv  MCD_2025_01_11_to_2025_01_17.csv  META_2025_01_11_to_2025_01_17.csv  NFLX_2025_01_11_to_2025_01_17.csv  NVDA_2025_01_11_to_2025_01_17.csv  NVO_2025_01_11_to_2025_01_17.csv  O_2025_01_11_to_2025_01_17.csv  PLTR_2025_01_11_to_2025_01_17.csv  QBTS_2025_01_11_to_2025_01_17.csv  QCOM_2025_01_11_to_2025_01_17.csv  QSI_2025_01_11_to_2025_01_17.csv  (+10 more)
tests/: test_stock_app.py
