[tool.poetry]
name = "stock_app"
version = "0.1.0"
description = "app for visualizing stocks"
authors = ["linus"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.18.2"
dash-bootstrap-components = "^1.6.0"
yfinance = "^0.2.50"
prophet = "^1.1.6"
pystocktopus = "^0.1.8"
python-dotenv = "^1.0.1"
dash-trich-components = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
